--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "nuxt export",
     "serve": "nuxt serve",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "yarn lint:js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "nuxt": "^2.13.0"
